# C-Processes-Communication

./: CMakeLists.txt  checksum.c  checksum.h  lionel_configReader.c  lionel_configReader.h  lionel_connection.c  lionel_connection.h  lionel_main.c  lionel_memory.c  lionel_memory.h  lionel_program.c  lionel_program.h  lionel_screen.c  lionel_screen.h  lionel_start.c  lionel_start.h  lionel_trama.c  lionel_trama.h  lionel_types.h  makefile  mcgruder_configReader.c  mcgruder_configReader.h  mcgruder_connection.c  mcgruder_connection.h  mcgruder_main.c  mcgruder_memory.c  mcgruder_memory.h  mcgruder_program.c  mcgruder_program.h  mcgruder_scanner.c  mcgruder_scanner.h  mcgruder_screen.c  mcgruder_screen.h  mcgruder_start.c  mcgruder_start.h  mcgruder_trama.c  mcgruder_trama.h  mcgruder_types.h  paquita.c  paquita.h
lionel/: ConfigLionel  KalkunJPG.txt  KalkunTXT.txt  Lionel
lionel/files/: constelacions1.txt  constelacions22.txt  constelacions3.txt
mcgruder1/: McGruder
